--- a/app/src/main/res/layout/activity_symptoms_detail.xml
+++ b/app/src/main/res/layout/activity_symptoms_detail.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/appbar"
         android:layout_margin="10dp"
+        android:background="@drawable/bg001"
         app:cardCornerRadius="20dp">
 
         <LinearLayout
@@ -41,9 +42,10 @@
 
 
             <TextView
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Are you Suffering for Joint Pain ?"
+                android:text="@string/are_you_suffering_for_joint_pain"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
@@ -93,7 +95,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Are you Feeling Itching sensation ?"
+                android:text="@string/are_you_feeling_itching_sensation"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
@@ -143,7 +145,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Capture Picture of Patient Tongue and lower eyelid ?"
+                android:text="@string/capture_picture_of_patient_tongue_and_lower_eyelid"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
@@ -186,7 +188,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Please explain if you are facing any other issues ?"
+                android:text="@string/please_explain_if_you_are_facing_any_other_issues"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
@@ -207,6 +209,7 @@
                         android:layout_height="50dp"
                         android:background="@drawable/roundcorner"
                         android:layout_centerInParent="true"
+                        android:layout_marginBottom="30dp"
                         app:srcCompat="@drawable/voicerecord100" />
 
                 </RelativeLayout>
